<resources>
    <string name="app_name">UD05_1_JustIt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tipo">Que tipo de comida quieres</string>
    <string name="send">Enviar</string>
    <string name="pollo">Chicken</string>
    <string name="puerco">Pig</string>
    <string name="vaca">Cow</string>
    <string name="cheese">Queixo da pereira</string>
    <string name="pickles">Peponollos</string>
    <string name="select_tipo">Seleccion un tipo</string>
    <string name="burguer_selected">Has seleccionado la hamburguesa %s</string>
    <string name="with_extras">Con los extras:</string>
</resources>