<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orderFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fabSend"
        android:src="@android:drawable/ic_menu_send"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/collapsing_toolbar"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fabSendToolBar"
                android:src="@android:drawable/ic_menu_send"
                android:layout_gravity="bottom|end"
                android:layout_margin="15dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/borguesa"
                app:layout_scrollFlags="scroll"
                app:layout_collapseMode="parallax"
                />
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_collapseMode = "pin"

                >

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

            <!-- app:layout_scrollFlags="scroll|enterAlways" -->
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tipo"/>
            <RadioGroup
                android:id="@+id/radio_grupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_pollo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pollo"/>
                <RadioButton
                    android:id="@+id/radio_puerco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/puerco"/>
                <RadioButton
                    android:id="@+id/radio_vaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vaca"/>
            </RadioGroup>
            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chipgroup_extras">
                <com.google.android.material.chip.Chip
                    android:id="@+id/extra_queso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese"
                    style="@style/Widget.MaterialComponents.Chip.Filter"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/extra_pickles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickles"
                    style="@style/Widget.MaterialComponents.Chip.Filter"/>
            </com.google.android.material.chip.ChipGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_marginTop="16dp"></Button>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>